Migrate part of cds-hooks to clinical-reasoning and invert the dependency relationship with hapi-fhir-cds-hooks. (#635)
* WIP

* Update interceptor

* Resolve compile errors.  Add commented out code that needs to be flipped between old and new versions of CdsConfigServiceImpl (old vs. new hapi-fhir-server-cds-hooks).

* Fix import and get rid of old imports.

* Revert code back to pulling in hapi-fhir 8.0.0 and restoring the shim as well as comments about why.

* Sonar.

* More Sonar.

* fix service registration

* More Sonar.

* More Sonar.  Get rid of Msg.code() calls.

* Spotless.

* More Sonar.  Fix test failure.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* Add new unit tests and TODOs.

* Add more tests.

* Spotless.

* refactor service and discovery logic into single version independent classes and add supporting adapters

* Various tweaks.

* add tests for adapters

* cleanup

* fix service

* cleanup

* more adapter tests

---------

Co-authored-by: Jonathan Percival <jonathan.i.percival@gmail.com>
Co-authored-by: Brenin Rhodes <brenin@alphora.com>
Co-authored-by: Brenin Rhodes <brenin.rhodes@smiledigitalhealth.com>