@@ -13,6 +13,7 @@ import org.hl7.fhir.r4.model.Attachment;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.DataRequirement;
+import org.hl7.fhir.r4.model.DataRequirement.DataRequirementCodeFilterComponent;
 import org.hl7.fhir.r4.model.Library;
 import org.hl7.fhir.r4.model.ParameterDefinition;
 import org.hl7.fhir.r4.model.Parameters;
@@ -22,6 +23,7 @@ import org.hl7.fhir.r4.model.RelatedArtifact;
 import org.hl7.fhir.r4.model.UriType;
 import org.opencds.cqf.fhir.utility.Constants;
 import org.opencds.cqf.fhir.utility.adapter.DependencyInfo;
+import org.opencds.cqf.fhir.utility.adapter.IDataRequirementAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IDependencyInfo;
 import org.opencds.cqf.fhir.utility.adapter.ILibraryAdapter;
 
@@ -59,7 +61,7 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
     @SuppressWarnings("unchecked")
     @Override
     public List<Attachment> getContent() {
-        return getLibrary().getContent().stream().collect(Collectors.toList());
+        return getLibrary().getContent().stream().toList();
     }
 
     @Override
@@ -83,10 +85,10 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
         // relatedArtifact[].resource
         getRelatedArtifact().stream()
                 .map(ra -> (RelatedArtifact) ra)
-                .filter(ra -> ra.hasResource())
+                .filter(RelatedArtifact::hasResource)
                 .map(ra -> DependencyInfo.convertRelatedArtifact(ra, referenceSource))
                 .forEach(references::add);
-        getLibrary().getDataRequirement().stream().forEach(dr -> {
+        getLibrary().getDataRequirement().forEach(dr -> {
             // dataRequirement[].profile[]
             dr.getProfile().stream()
                     .filter(IPrimitiveType::hasValue)
@@ -94,7 +96,7 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
                             referenceSource, profile.getValue(), profile.getExtension(), profile::setValue)));
             // dataRequirement[].codeFilter[].valueSet
             dr.getCodeFilter().stream()
-                    .filter(cf -> cf.hasValueSet())
+                    .filter(DataRequirementCodeFilterComponent::hasValueSet)
                     .forEach(cf -> references.add(
                             new DependencyInfo(referenceSource, cf.getValueSet(), cf.getExtension(), cf::setValueSet)));
         });
@@ -129,10 +131,16 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
         return getLibrary().getParameter();
     }
 
-    @SuppressWarnings("unchecked")
     @Override
-    public List<DataRequirement> getDataRequirement() {
-        return getLibrary().getDataRequirement();
+    public boolean hasDataRequirement() {
+        return getLibrary().hasDataRequirement();
+    }
+
+    @Override
+    public List<IDataRequirementAdapter> getDataRequirement() {
+        return getLibrary().getDataRequirement().stream()
+                .map(DataRequirementAdapter::new)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -160,8 +168,9 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
                         return getLibrary().getContained().stream()
                                 .filter(containedResource ->
                                         containedResource.getId().equals(ref))
+                                .filter(IBaseParameters.class::isInstance)
+                                .map(IBaseParameters.class::cast)
                                 .findFirst()
-                                .map(r -> (IBaseParameters) r)
                                 .orElse(null);
                     }
                     return null;
